# ltspice-runner

./: .gitmodules  README.md  pyproject.toml
example/: differentiating-opamp.asc  integrating-opamp.asc  inverting-opamp.asc  noninverting-opamp.asc  optimize_step.py  run_tests.py
ltspice_runner/: __init__.py  cli.py  netlist.py  optimizer.py  plotter.py  runner.py  simulation.py  sources.py
